--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -27,7 +27,7 @@ body {
 }
 
 .section-description {
-    color:#757575;
+    color: #757575;
     text-align: center;
     font-size: 18px;
     font-weight: 400;
@@ -114,6 +114,12 @@ nav a {
 }
 
 /* Main section styles */
+main {
+    max-width: 1140px;
+    margin: 0px auto;
+}
+
+/* About section styles */
 .about {
     padding: 130px;
     border-radius: 10px;
@@ -122,6 +128,39 @@ nav a {
 
 }
 
+.about-info-container {
+    display: flex;
+    /* align-items: ; */
+    justify-content: space-around;
+}
 
+.about-info {
+    text-align: center;
 
-/* About section styles */
+}
+
+.info-title {
+    color: #757575;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1px;
+
+}
+
+.info-description {
+    color: var #474747;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.5px;
+}
+
+#what-i-do-description {
+    padding: 0px 150px 50px;
+}
+
+.skill-container {
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    display: flex;
+}
