--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -192,8 +192,31 @@ main section {
 
 /* Resume section */
 .resume-column-title {
-    color:#474747;
+    color: #474747;
     font-size: 30px;
     font-weight: 700;
+}
 
+.resume-container {
+    display: flex;
+    gap: 70px;
+}
+
+.resume-item-description {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.resume-item-institute {
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600;
+
+}
+
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
 }
