--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -212,6 +212,8 @@ main section {
     color: #757575;
     font-size: 20px;
     font-weight: 600;
+    margin-bottom: 20px;
+    margin-top: 0px;
 
 }
 
@@ -219,4 +221,12 @@ main section {
     color: #474747;
     font-size: 25px;
     font-weight: 700;
+    margin-bottom: 10px;
+}
+.resume-container hr{
+    margin: 30px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
 }
