--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -230,3 +230,10 @@ main section {
     text-align: center;
     margin-top: 50px;
 }
+/* footer style */
+footer{
+    background: #FFF8F3;
+    margin-top: 100px;
+    display: flex;
+    padding: 130px 200px;
+}
