--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -223,17 +223,41 @@ main section {
     font-weight: 700;
     margin-bottom: 10px;
 }
-.resume-container hr{
+
+.resume-container hr {
     margin: 30px;
 }
-.download-cv{
+
+.download-cv {
     text-align: center;
     margin-top: 50px;
 }
+
 /* footer style */
-footer{
+footer {
     background: #FFF8F3;
     margin-top: 100px;
     display: flex;
     padding: 130px 200px;
+    gap: 100px;
+}
+
+.footer-column {
+    width: 50%;
+
+}
+
+.contact input[type="text"], .contact input[type="emai;l"], 
+textarea {
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px, 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0;
+    width: 100%;
+}
+.social-links a{
+    margin-right: 25px;
 }
